# sge-server

./: CMakeLists.txt  LICENSE  README.md
example/: config.py  main.py
src/: main.c
src/core/: buffer.c  buffer.h  config.h  list.c  list.h  log.c  log.h  queue.c  queue.h  sge.h  spinlock.h
src/os/: event.c  event.h  server.c  server.h  socket.c  socket.h
src/python-lib/sgeWeb/: Connection.py  Request.py  Response.py  __init__.py
src/python-src/: common.h  env.c  env.h
